updated dropdown translation

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -745,7 +745,8 @@
     "remove_from_favourites": "REMOVE FROM FAVOURITES",
     "mute": "MUTE / BLOCK",
     "unmute": "UNMUTE / UNBLOCK",
-    "report": "REPORT USER"
+    "report": "REPORT USER",
+    "delegate":"DELEGATE HIVE POWER"
   },
   "communities": {
     "joined": "Membership",
