--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -783,7 +783,9 @@
     "line2_body":"Utilizing blockchain, censorship-free, decentralized and rewarding.",
     "line3_heading":"Join Ecency communities!",
     "line3_body":"Build community you own, get rewarded and reward others.",
-    "get_started":"Get started!"
+    "get_started":"Get started!",
+    "terms_description": "By using app, you agree to our ",
+    "terms_text": " Terms"
   },
   "time":{
     "second":"seconds",
