updated terms message

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -784,8 +784,8 @@
     "line3_heading":"Join Ecency communities!",
     "line3_body":"Build community you own, get rewarded and reward others.",
     "get_started":"Get started!",
-    "terms_description": "By using app, you agree to our ",
-    "terms_text": " Terms"
+    "terms_description": "By accepting, you agree to our Terms of Service and Privacy Policies.",
+    "terms_text": " Read Here!"
   },
   "time":{
     "second":"seconds",
