added setting to enable disable biometric unlock

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -229,6 +229,7 @@
       "delegations": "Delegations"
     },
     "pincode": "PIN code",
+    "biometric": "TouchId / FaceId Unlock",
     "reset_pin": "Reset Pin Code",
     "reset": "Reset",
     "nsfw_content": "NSFW",
