--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -420,7 +420,8 @@
     "forgot_text": "Oh, I forgot it...",
     "pin_not_matched":"PIN do not match, Please try again.",
     "attempts_postfix":"failed attempt(s)",
-    "message_reset_warning":"User data will be wiped on next failed attempt"
+    "message_reset_warning":"User data will be wiped on next failed attempt",
+    "biometric_desc":"Scan your biometric to continue"
   },
   "alert": {
     "success": "Success!",
