--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -421,7 +421,7 @@
     "pin_not_matched":"PIN do not match, Please try again.",
     "attempts_postfix":"failed attempt(s)",
     "message_reset_warning":"User data will be wiped on next failed attempt",
-    "biometric_desc":"Scan your biometric to continue"
+    "biometric_desc":"Scan your fingerprint on the device scanner to continue"
   },
   "alert": {
     "success": "Success!",
