added intl for qr failure warning

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -826,7 +826,9 @@
   "qr":{
     "qr_scan": "QR Scan",
     "open": "Open URL",
-    "detected_url": "Detected URL"
+    "detected_url": "Detected URL",
+    "unsupported_alert_title": "Unsupported URL!",
+    "unsupported_alert_desc": "Please scan a valid ecency url."
   },
   "history": {
     "edit": "Edit History",
