--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -250,7 +250,7 @@
     "feedback_success": "Email successfully open",
     "feedback_fail": "Email client could not open",
     "server_fail": "Server not available",
-    "show_imgs": "Show images"
+    "show_imgs": "Show Images"
   },
   "voters": {
     "voters_info": "Voters Info",
