renamed boost btn text to get boost

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -132,7 +132,8 @@
     "conversions_requested":"Conversions Requested",
     "expires":"expires",
     "pending_requests":"Pending Requests",
-    "boost_account": "Boost"
+    "boost_account": "Boost",
+    "get_boost": "Get Boost"
   },
   "notification": {
     "vote": "voted",
