--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -267,7 +267,9 @@
     "cancel": "cancel",
     "login": "LOGIN",
     "steemconnect_description": "If you don't want to keep your password encrypted and saved on your device, you can use Hivesigner.",
-    "steemconnect_fee_description": "info"
+    "steemconnect_fee_description": "info",
+    "deep_login_alert_title": "Easy Login @{username}",
+    "deep_login_alert_body":"Verify direct login using access code"
   },
   "register": {
     "button": "Sign Up",
