--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -583,8 +583,9 @@
     "unpin-blog":"Unpin from blog",
     "pin-community":"Pin to community",
     "unpin-community":"Unpin from community",
-    "edit-history": "Edit History"
-
+    "edit-history": "Edit History",
+    "mute": "Mute / Block",
+    "unmute": "UnMute / UnBlock"
   },
   "deep_link": {
     "no_existing_user": "No existing user",
