added not loggedin alert if user not logged in

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -267,7 +267,9 @@
     "cancel": "cancel",
     "login": "LOGIN",
     "steemconnect_description": "If you don't want to keep your password encrypted and saved on your device, you can use Hivesigner.",
-    "steemconnect_fee_description": "info"
+    "steemconnect_fee_description": "info",
+    "not_loggedin_alert": "Not LoggedIn",
+    "not_loggedin_alert_desc": "Please login first"
   },
   "register": {
     "button": "Sign Up",
