--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -410,7 +410,7 @@
     "btn_cancel":"Cancel"
   },
   "uploads_modal":{
-    "label_no_images":"No Images Found",
+    "label_no_images":"No Existing Uploads...",
     "title":"Uploaded Images",
     "title_remove_confirmation":"Delete image",
     "btn_add":"Image",
