--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -272,7 +272,7 @@
     "not_loggedin_alert": "Not LoggedIn",
     "not_loggedin_alert_desc": "Please login first",
     "login_failed": "Login Failed",
-    "login_failed_body": "Invalid username or password, try a different key or try again later."
+    "login_failed_body": "try a different key or try again later."
 
   },
   "register": {
