updated undelgate behave

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -61,6 +61,7 @@
     "amount_information": "Drag the slider to adjust the amount",
     "amount": "Amount",
     "memo": "Memo",
+    "tap_update":"Tap to update",
     "information": "Are you sure to transfer funds?",
     "amount_desc": "Balance",
     "memo_desc": "This memo is public",
