--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -61,6 +61,7 @@
     "amount_information": "Drag the slider to adjust the amount",
     "amount": "Amount",
     "memo": "Memo",
+    "tap_update":"Tap to update",
     "information": "Are you sure to transfer funds?",
     "amount_desc": "Balance",
     "memo_desc": "This memo is public",
@@ -272,8 +273,11 @@
     "not_loggedin_alert": "Not LoggedIn",
     "not_loggedin_alert_desc": "Please login first",
     "login_failed": "Login Failed",
-    "login_failed_body": "try a different key or try again later."
-
+    "login_failed_body": "try a different key or try again later.",
+    "deep_login_alert_title": "Easy Login @{username}",
+    "deep_login_alert_body":"Verify direct login using access code",
+    "deep_login_url_expired":"Login url expired, please use private key or password to login",
+    "deep_login_malformed_url":"Malformed login url, please use private key or password to login" 
   },
   "register": {
     "button": "Sign Up",
