fixed favorite notification type key typo

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -141,7 +141,7 @@
     "unvote": "downvoted",
     "reply": "replied to",
     "mention": "mentioned in",
-    "favorite": "made new post",
+    "favorites": "made new post",
     "follow": "followed you",
     "unfollow": "unfollowed you",
     "ignore": "ignored you",
