refined tags input behaviour

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -352,6 +352,7 @@
     "limited_characters": "Use only lowercase letters, digits and one dash",
     "limited_firstchar": "Tag must start with a letter",
     "limited_lastchar": "Tag must end with letter or number",
+    "tag_duplicate":"Tag exists already",
     "setting_schedule": "Scheduling Time",
     "setting_reward": "Reward",
     "setting_reblog": "Reblog",
@@ -364,6 +365,7 @@
     "options": "Options",
     "my_blog": "My Blog",
     "select_community":"Choose a community",
+    "community_selected":"Community Selected",
     "my_communities": "My Communities",
     "top_communities": "Top Communities",
     "schedule_modal_title": "Schedule Post",
