--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -142,6 +142,7 @@
     "reply": "replied to",
     "mention": "mentioned in",
     "favorites": "made new post",
+    "bookmarks": "has new reply",
     "follow": "followed you",
     "unfollow": "unfollowed you",
     "ignore": "ignored you",
@@ -229,6 +230,7 @@
       "comment": "Comment",
       "mention": "Mention",
       "favorite": "Favorites",
+      "bookmark": "Bookmarks",
       "reblog": "Reblog",
       "transfers": "Transfers",
       "delegations": "Delegations"
