--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -142,7 +142,7 @@
     "reply": "replied to",
     "mention": "mentioned in",
     "favorites": "made new post",
-    "bookmarks": "has new reply",
+    "bookmarks": "made new reply on",
     "follow": "followed you",
     "unfollow": "unfollowed you",
     "ignore": "ignored you",
