using in app browser for post and comment linkt

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -491,7 +491,7 @@
     "connection_fail": "Connection Failed!",
     "connection_success": "Successfully connected!",
     "checking": "Checking...",
-    "external_link": "Open in Browser",
+    "external_link": "Open external link",
     "not_existing_post": "The post does not exist! Please check permlink and author.",
     "google_play_version": "We noticed that your device has old version of Google Play. Please update Google Play services and try again!",
     "rc_down": "Not enough resource credits to perform an action! \n\nBoost your account to continue enjoy the experience. Do you want to boost your account, now?",
