rendering extra data pairs for engine tokens

--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -20,6 +20,9 @@
     "incoming_transfer_title": "Incoming transfer",
     "outgoing_transfer_title": "Outgoing transfer",
     "checkin_extra": "Bonus",
+    "staked":"Staked",
+    "delegations_in":"Delegagtions In",
+    "delegations_out":"Delegations Out",
     "delegation": "Delegation",
     "delegations": "Delegations",
     "delegation_title": "Delegation reward",
