--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -21,8 +21,6 @@
     "outgoing_transfer_title": "Outgoing transfer",
     "checkin_extra": "Bonus",
     "staked":"Staked",
-    "unstake":"Unstake",
-    "stake":"Stake",
     "delegations_in":"Delegagtions In",
     "delegations_out":"Delegations Out",
     "delegation": "Delegation",
@@ -139,7 +137,12 @@
     "expires":"expires",
     "pending_requests":"Pending Requests",
     "boost_account": "Boost",
-    "get_boost": "Get Boost"
+    "get_boost": "Get Boost",
+    "transfer_engine":"Transfer",
+    "unstake_engine":"Unstake",
+    "stake_engine":"Stake",
+    "delegate_engine":"Delegate",
+    "undelegate_engine":"Undelegate"
   },
   "notification": {
     "vote": "voted",
@@ -657,6 +660,11 @@
     "percent": "Percent",
     "auto_vests": "Auto Vests",
     "vests": "Vests",
+    "transfer_engine":"Transfer Token",
+    "stake_engine":"Stake Token",
+    "unstake_engine":"Unstake Token",
+    "delegate_engine":"Delegate Token",
+    "undelegate_engine":"Undelegate Token",
     "save": "SAVE",
     "percent_information": "Percent info",
     "next": "NEXT",
