--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -8,7 +8,7 @@
     "power_up": "To Vesting",
     "transfer_from_savings": "From Savings",
     "withdraw_savings":"Withdraw Savings",
-    "withdraw_vesting": "Power Down",
+    "withdraw_vesting": "Power Down | Unstake",
     "open_order":"Open Order",
     "fill_order": "Fill Order",
     "post": "Post",
@@ -74,12 +74,12 @@
     "purchase_estm": "GET POINTS",
     "points": "Gift Points to someone",
     "transfer_to_saving": "To Saving",
-    "transfer_to_vesting": "Power Up",
+    "transfer_to_vesting": "Power Up | Stake",
     "withdraw_to_saving": "Withdraw Saving",
     "steemconnect_title": "Hivesigner Transfer",
     "next": "NEXT",
     "delegate": "Delegate",
-    "power_down": "Power Down",
+    "power_down": "Power Down | Unstake",
     "withdraw_hive": "Withdraw Savings",
     "withdraw_hbd": "Withdraw Savings",
     "transfer_to_savings": "To Savings",
@@ -120,7 +120,7 @@
     },
     "hive_power": {
       "title": "HIVE POWER",
-      "name": "Hive Power"
+      "name": "Hive Power | Staked Hive"
     },
     "hive_dollar":{
       "name":"Hive Dollar"
@@ -655,7 +655,7 @@
     "convert": "Convert HBD to HIVE",
     "points": "Gift Points to someone",
     "transfer_to_savings": "Transfer To Saving",
-    "transfer_to_vesting": "Power Up",
+    "transfer_to_vesting": "Power Up | Stake",
     "withdraw_to_saving": "Withdraw To Saving",
     "steemconnect_title": "Hivesigner Transfer",
     "estimated_weekly": "Estimated Weekly",
@@ -692,7 +692,7 @@
     "confirm_summary_para": "This will overwrite your previous delegation of {prev} HP to this user.",
     "username_alert": "Username Error!",
     "username_alert_detail": "Please select different username",
-    "power_down": "Power Down",
+    "power_down": "Power Down | Unstake",
     "power_down_amount_head": "Withdraw Amount",
     "power_down_amount_subhead": "Enter amount for powering down hive power",
     "withdraw_accounts":"Withdraw Accounts",
