--- a/src/config/locales/en-US.json
+++ b/src/config/locales/en-US.json
@@ -146,7 +146,8 @@
     "unstake_engine":"Unstake",
     "stake_engine":"Stake",
     "delegate_engine":"Delegate",
-    "undelegate_engine":"Undelegate"
+    "undelegate_engine":"Undelegate",
+    "inactive_token":"Token is relatively inactive, some functionalities might be affected."
   },
   "notification": {
     "vote": "voted",
